syntax = "proto3";

option java_package = "com.weareadaptive.auctionhouse.Auction";
option java_outer_classname = "gRPCAuctionService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "bid/BidService.proto";

service AuctionService {
  rpc createAuction(CreateAuctionRequest) returns (AuctionResponse){}
  rpc deleteAuction(DeleteAuctionRequest) returns (AuctionResponse){}
  rpc getAuction(GetAuctionRequest) returns (AuctionResponse){}
  rpc closeAuction(CloseAuctionRequest) returns (AuctionResponse){}
  rpc subscribeToGetAuctionsService(stream google.protobuf.Empty) returns (stream AuctionsResponse){}
  rpc subscribeToAuctionUpdateService(stream google.protobuf.Empty) returns (stream BidsResponse){} //TODO: Rename to bids
}

enum AuctionStatusValue {
  OPEN = 0;
  CLOSED = 1;
}

message ClosingSummary {
  google.protobuf.Timestamp closedAt = 1;
  google.protobuf.Timestamp createdAt = 2;
  string totalRevenue = 3;
  int32 totalQuantitySold = 4;
}

message AuctionResponse {
  int32 auctionId = 1;
  int32 ownerId = 2;
  string product = 3;
  double minOfferPrice = 4;
  int32 quantity = 5;
  repeated BidResponse bids = 6;
  AuctionStatusValue auctionStatus = 7;
  oneof closingSummary {
    google.protobuf.Empty emptySummary = 8;
    ClosingSummary summary = 9;
  }
}

message CreateAuctionRequest {
  string product = 1;
  double minOfferPrice = 2;
  int32 quantity = 3;
}

message CloseAuctionRequest {
  int32 auctionId = 1;
}

message GetAuctionRequest {
  int32 auctionId = 1;
}

message AuctionsResponse {
  bool initialData = 1;
  repeated AuctionResponse auctions = 2;
}

message DeleteAuctionRequest {
  int32 auctionId = 1;
}